--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full" data-theme="default">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
@@ -13,7 +13,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="from-cloud-bg-primary to-cloud-bg-secondary bg-gradient-to-b bg-repeat h-full text-cloud-text [text-shadow:_2px_1px_3px_rgb(0_0_0_/_100%)]">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
